resources/k8s-resources/resources-private.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-jenkins
  namespace: private-resources
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-jenkins
  template:
    metadata:
      labels:
        app: private-jenkins
    spec:
      containers:
        - name: app
          image: jenkins/jenkins
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: private-jenkins
  namespace: private-resources
spec:
  selector:
    app: private-jenkins
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-nginx
  namespace: private-resources
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-nginx
  template:
    metadata:
      labels:
        app: private-nginx
    spec:
      containers:
        - name: app
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: private-nginx
  namespace: private-resources
spec:
  selector:
    app: private-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
