resources/k8s-resources/resources-public.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-jenkins
  namespace: public-resources
spec:
  replicas: 1
  selector:
    matchLabels:
      app: public-jenkins
  template:
    metadata:
      labels:
        app: public-jenkins
    spec:
      containers:
        - name: app
          image: jenkins/jenkins
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: public-jenkins
  namespace: public-resources
spec:
  selector:
    app: public-jenkins
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-nginx
  namespace: public-resources
spec:
  replicas: 1
  selector:
    matchLabels:
      app: public-nginx
  template:
    metadata:
      labels:
        app: public-nginx
    spec:
      containers:
        - name: app
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: public-nginx
  namespace: public-resources
spec:
  selector:
    app: public-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-caddy
  namespace: public-resources
spec:
  replicas: 1
  selector:
    matchLabels:
      app: public-caddy
  template:
    metadata:
      labels:
        app: public-caddy
    spec:
      containers:
        - name: app
          image: caddy
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: public-caddy
  namespace: public-resources
spec:
  selector:
    app: public-caddy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
